# video-to-action

./: .coverage  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_REVIEW_REPORT.md  BUGFIX_REPORT_2026-06-28.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Dockerfile  FINAL_FIX_REPORT.md  FIX_COMPLETION_REPORT.md  FIX_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION_REPORT.md  FUNCTIONAL_MODULES_ANALYSIS.md  HF_MIRROR_FINAL_REPORT.md  HF_MIRROR_FIX_REPORT.md  README.md  RUN_ISSUES_REPORT.md  STYLE_REPORT.md  TASK_COMPLETION_REPORT.md  bilibili_cookie_manager.py  convert_cookies.py  docker-compose.yml  fix_style.py  init_mysql.py  pyproject.toml  quick_bilibili_cookie.py  requirements.txt  start_web.py  test_url_formats.py  test_ytdlp_bilibili.py
api/: main.py  task_manager.py
config/: bilibili_cookies.json  bilibili_cookies.txt  settings.example.yaml  settings.py  settings.yaml
data/: knowledge_base.db  tasks.db
database/: README.md  migrate.py  migrate_add_tool_name_index.sql  migrate_to_mysql.py  mysql_db.py  schema.sql
deliverables/: video-to-action-comprehensive-audit-20260626.md  video-to-action-implementation-plan-20260626.md
docs/: ARCHITECTURE.md  EVOLUTION_DESIGN.md  audit-report-2026-06-26.md  audit-report-supplement-2026-06-26.md  class-diagram.mermaid  sequence-diagram.mermaid  system_design.md
frontend/: index.html  package-lock.json  package.json  run_build.bat  vite.config.ts  vitest.config.ts
logs/: requirements.txt
scripts/: batch_process.py  deploy.bat  deploy.py  deploy.sh  setup-code-review.bat  setup-code-review.sh  warmup.py
skill/: SKILL.md
tests/: README.md  TEST_REPORT.md  conftest.py  perf_test.py  test_analyzer.py  test_analyzer_v2_extended.py  test_cli.py  test_config.py  test_downloader.py  test_executor.py  test_extractor.py  (+4 more)
(+175 files in other folders)
