[project]
name = "video-to-action"
version = "0.1.0"
description = "从视频链接自动理解内容并执行安装/配置"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.12.0",
    "faster-whisper>=1.0.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.45.0",
    "markdown>=3.6",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]

[project.scripts]
v2a = "video_to_action.cli:main"
