[project]
name = "video-to-action"
version = "0.1.0"
description = "视频内容分析与动作生成工具"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2024.12.0",
    "faster-whisper>=1.0.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.45.0",
    "markdown>=3.6",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "typer[all]>=0.12.0",
]

[tool.pytest.ini_options]
addopts = "--cov=video_to_action --cov-report=term-missing --cov-fail-under=48"
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 排除的目录
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["video_to_action", "tools"]

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",  # whitespace before ':' (black 会处理)
    "W503",  # line break before binary operator (black 会处理)
]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    "*.egg-info",
]
